--- a/style.css
+++ b/style.css
@@ -1,245 +1,42 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
 body {
-  line-height: 1;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
+  background-color: rgb(73, 73, 73);
+  font-family: "Nunito", sans-serif;
 }
 
-body {
-  font-family: "Roboto Mono", monospace;
-  background-color: black;
+.blurb h2 {
+  color: orange;
+  font-weight: 100;
+  font-size: 2.5rem;
+}
+.blurb p {
+  color: black;
+  font-weight: 100;
+  font-size: 1.125rem;
+  line-height: 2;
 }
 
-h1 {
-  font-size: 6em;
-  text-align: center;
+.content {
+  margin-top: 100px;
 }
-nav {
-  font-size: 1em;
-  display: flex;
-  background-color: rgb(21, 61, 97);
-  justify-content: space-between;
-  padding: 5px;
-  border-top: 10px;
+#mainNavbar {
+  font-size: 1.5rem;
+  font-weight: 100;
 }
-.home {
+#mainNavbar .nav-link {
   color: white;
-  padding: 25px;
-  margin: 20px;
-  border-radius: 10px;
-  border: 2px solid black;
-  text-decoration: none;
 }
-.portfolio {
-  color: white;
-  padding: 25px;
-  margin: 20px;
-  border-radius: 10px;
-  border: 2px solid black;
-  text-decoration: none;
-}
-.postItDrawings {
-  color: white;
-  padding: 25px;
-  margin: 20px;
-  border-radius: 10px;
-  border: 2px solid black;
-  text-decoration: none;
-}
-.about {
-  color: white;
-  padding: 25px;
-  margin: 20px;
-  border-radius: 10px;
-  border: 2px solid black;
-  text-decoration: none;
-}
-.emailMe {
-  color: white;
-  padding: 25px;
-  margin: 20px;
-  border-radius: 10px;
-  border: 2px solid black;
-  text-decoration: none;
-}
-ul,
-li {
-  display: inline;
-  margin: 25px;
-  padding: 10px;
-}
-ul {
-  flex: 1;
-  max-width: 50%;
-  display: flex;
-  justify-content: space-between;
-}
-/* 
-at 800 and above this will be true */
-/* @media (min-width: 600px) and (max-width: 800px) {
- */
-
-h1 {
-  color: red;
+#mainNavbar .nav-link:hover {
+  color: orange;
 }
 
-@media (min-width: 500px) {
-  h1 {
-    color: rgb(255, 166, 0);
-  }
+#mainNavbar .navbar-brand {
+  color: orange;
 }
-@media (min-width: 1000px) {
-  h1 {
-    color: rgb(185, 102, 0);
-  }
-}
-@media (min-width: 1500px) {
-  h1 {
-    color: rgb(128, 75, 0);
-  }
+#mainNavbar .navbar-brand:hover {
+  color: black;
 }
 
-/* @media (orientation: landscape) {
-  body {
-    background-color: magenta;
-  }
-} */
-@media (max-width: 768px) {
-  h1 {
-    font-size: 4em;
-  }
-
-  nav,
-  nav ul {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-@media (max-width: 576px) {
-  h1 {
-    font-size: 3em;
-  }
+.navbar.scrolled {
+  background: rgb(222, 192, 222);
+  transition: background 500ms;
 }
