--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   font-size: 2.5rem;
 }
 .blurb p {
-  color: black;
+  color: whitesmoke;
   font-weight: 100;
   font-size: 1.125rem;
   line-height: 2;
