--- a/style_copy.css
+++ b/style_copy.css
@@ -50,7 +50,18 @@ button {
 
 .postItPictures {
   border-radius: 2.3rem;
+  padding: 0.5rem;
+  /* outline: 2px solid Black; */
+}
+.postItPicturesWide {
+  border-radius: 2.3rem;
+  height: 150px;
+  padding: 0.5rem;
+}
 
+.postItPicturesTall {
+  border-radius: 2.3rem;
+  width: 150px;
   padding: 0.5rem;
 }
 .previousBlack {
